deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  namespace: ProjetodaRede    # Defina o namespace aqui
  labels:
    app: web
spec:
  replicas: 2
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - name: site-container
        image: anderson0920/flask-library-app:latest
        ports:
        - containerPort: 5000
