service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service
  namespace: ProjetodaRede # Certifique-se de que o namespace coincide com o Ingress
spec:
  selector:
    app: web
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
  type: LoadBalancer
